changes branch_2025-05-26_18-21-24